; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_helloblock.c_HelloBlock_ThreadMain.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_helloblock.c_HelloBlock_ThreadMain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @HelloBlock_ThreadMain(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = bitcast i8* %7 to i8**
  store i8** %8, i8*** %3, align 8
  %9 = load i8**, i8*** %3, align 8
  %10 = getelementptr inbounds i8*, i8** %9, i64 0
  %11 = load i8*, i8** %10, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %4, align 8
  %13 = load i8**, i8*** %3, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 1
  %15 = load i8*, i8** %14, align 8
  %16 = ptrtoint i8* %15 to i64
  store i64 %16, i64* %5, align 8
  %17 = load i8**, i8*** %3, align 8
  %18 = call i32 @RedisModule_Free(i8** %17)
  %19 = load i64, i64* %5, align 8
  %20 = call i32 @sleep(i64 %19)
  %21 = call i32* @RedisModule_Alloc(i32 4)
  store i32* %21, i32** %6, align 8
  %22 = call i32 (...) @rand()
  %23 = load i32*, i32** %6, align 8
  store i32 %22, i32* %23, align 4
  %24 = load i32*, i32** %4, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @RedisModule_UnblockClient(i32* %24, i32* %25)
  ret i8* null
}

declare dso_local i32 @RedisModule_Free(i8**) #1

declare dso_local i32 @sleep(i64) #1

declare dso_local i32* @RedisModule_Alloc(i32) #1

declare dso_local i32 @rand(...) #1

declare dso_local i32 @RedisModule_UnblockClient(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
